# TestTaskLinux

./: Program1  Program1.cpp  Program2  Program2.cpp  README.md  myclient.cpp  myreceiver.cpp  mysender.cpp  myserver.cpp
Task/: Makefile  Process1.cpp  Process1.h  Process2.cpp  Process2.h  Process3.cpp  Program1.cpp  README.md
Task/Program1/: CMakeLists.txt  Process1.cpp  Process1.h  Process2.cpp  Process2.h  Sender.cpp  Sender.h  main.cpp
Task/Program2/: Program2.cpp
